# macdirstat-rs

./: .gitignore  Cargo.toml
MacDirStat.app/Contents/: Info.plist
src/: app.rs  console_log.rs  file_types.rs  fuzzy.rs  main.rs  scanner.rs  search.rs  settings.rs  sidebar.rs  treemap.rs  types.rs
