[package]
name = "macdirstat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "macdirstat"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = "0.29"
rayon = "1.10"
walkdir = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
